--- a/210629_string.md
+++ b/210629_string.md
@@ -35,7 +35,7 @@
 - if 랑 조합해서 사용 가능
 
   > ~~~
-  > ids= ['sun', 'flower', 'sky']
+  > ids= ['sun', 'flower', 'sk']
   > ID = input()
   > 
   > if ID in ids:
