--- a/210630_set.md
+++ b/210630_set.md
@@ -1,6 +1,7 @@
 ## set (집합)
 
 - 수학의 집합 중복되지 않은 항목들이 모인 것
+- 대괄호로 표현
 - 입력된 순서와 출력된는 순서가 다름
 - 동일한 요소값을 입력 가능하지만 동일한 값이 출력되지 않음
 - 해시 구조로 저장
@@ -30,6 +31,12 @@
 
 - remove()
 
+  - 존재하지 않을 경우 에러 발생
+
+- discard()
+
+  - 존재하지 않아도 에러가 발생하지 않음
+
 - clear()
 
   - 전체 요소 제거
@@ -42,4 +49,31 @@
 
 
 ---
+
+## 집합 연산
+
+- 합집합
+  - a|b
+  - a.union(b)
+- 교집합
+  - a&b
+  - a.intersection(b)
+- 차집합
+  - a-b
+  - a.difference(b)
+
+```
+A = {1, 2, 3}
+B = {3, 4, 5, 6}
+
+print(A|B)
+print(A.union(B))
+
+
+print(A&B)
+print(A.intersection(B))
+
+print(A-B)
+print(A.difference(B))
+```
 
