--- a/210702_module.md
+++ b/210702_module.md
@@ -44,3 +44,24 @@
   - from 모듈명 import 변수명 or 함수명 as 별칭
   - from 모듈명 import*
     - 모듈 내에서 '_'로 시작하는 스페셜 변수나 매직 매서드를 제외한 모든 것을 참조
+
+---
+
+## 모듈 추가 방법 (Pycharm 기준)
+
+- [File] - [Settings..]
+
+  ![image-20210703151916779](TIL_picture/image-20210703151916779.png)
+
+- [Show All...]
+
+  ![image-20210703152029848](TIL_picture/image-20210703152029848.png)
+
+- Path 추가
+
+  ![image-20210703152139094](TIL_picture/image-20210703152139094.png)
+
+![image-20210703152229656](TIL_picture/image-20210703152229656.png)
+
+---
+
