--- a/210702_module.md
+++ b/210702_module.md
@@ -6,7 +6,7 @@
 
 ## 함수/모듈/패키지 관계
 
-![image-20210702143313279](C:\Users\USER-PC\Desktop\Study\Daily\TIL\TIL_picture\image-20210702143313279.png)
+![image-20210706091851034](TIL_picture/image-20210706091851034.png)
 
 ---
 
