--- a/210706_class.md
+++ b/210706_class.md
@@ -77,9 +77,7 @@ print("자동차3의 색상은 %s이며, 현재 속도는 %dkm입니다." % (myC
 
 ## class 선언
 
-![image-20210706153823880](C:\Users\USER-PC\Desktop\Study\Daily\TIL\TIL_picture\image-20210706153823880.png)
-
-![image-20210706153839638](C:\Users\USER-PC\Desktop\Study\Daily\TIL\TIL_picture\image-20210706153839638.png)
+![image-20210707192622549](TIL_picture/image-20210707192622549.png)
 
 ---
 
@@ -245,7 +243,7 @@ print('면적 r_2 : ', r_2.calcArea())
 - class method (static method) - @staticmethod 사용
   - 객체를 생성하지 않고 클랙스 접근에서 사용하는 경우 (인스턴스 작업이 필요하지 않음)
 
-![image-20210706171239729](C:\Users\USER-PC\Desktop\Study\Daily\TIL\TIL_picture\image-20210706171239729.png)
+![image-20210707192720289](TIL_picture/image-20210707192720289.png)
 
 ~~~python
 class Math:
